fixed the css of job seeker match page, event page for both job seeker and recruiter and the white gap below footer

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   /* background-color:#94aac4; */
 }
 
-
+.app-container {
+  min-height: calc(100vh - 40px);
+}
 
 /* header */
 .header {
@@ -148,8 +150,7 @@ button:hover {
 /* Profile pages */
 .greeting-box{
   width: fit-content;
-  margin: 20px;
-  margin-left: 50px;
+  margin: 15px 30px;
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -164,7 +165,7 @@ button:hover {
   flex-direction: column;
 }
 
-.profile-content, .events-content{
+.profile-content {
   width: auto;
   margin: 20px;
   margin-left: 50px;
@@ -232,12 +233,58 @@ button:hover {
 }
 
 /* Event Page */
+.event-page-container {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 15px 30px;
+  text-align: center;
+}
+
+.event-page-list {
+  margin-left: 0px;
+  width:80%;
+}
 
 .event-list {
   display: flex;
   flex-direction: column;
 }
 
+.going-event-list-title {
+  color: #94aac4;
+  margin-bottom: 10px;
+}
+
+.event-photo-wrapper-event-page {
+  width: 30vw;
+  height: 40vh;
+}
+
+.event-page-btn-group {
+  display: flex;
+  flex-direction: row;
+}
+
+.event-page-btn-group button {
+  margin-right: 10px;
+}
+
+.save-event {
+  background: #94aac4;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.add-event {
+  background: #94aac4;
+  color: #fff;
+  margin-bottom: 15px;
+  width: 150px;
+}
+
+/* these can all be deleted
 .event-item-container{
   margin: 10px;
   border: 2px medium black;
@@ -265,29 +312,28 @@ button:hover {
   display: flex;
   justify-content: center;
 }
+*/
 
 /* Match pages */
 .match-page-container {
-  /* margin-top: 5vh; */
-  flex: 1;
   width: 100%;
   display: flex;
   flex-direction: row;
-  /* justify-content: space-between; */
+  justify-content: center;
+  align-items: flex-start;
+  padding: 15px 30px;
 }
 
 .JobSeekersMatchSidebar {
-  padding: 2vw;
   width:25%;
   overflow: scroll;
 
 }
 
 .match-event-list {
-  padding:50px;
+  margin-left: 20px;
   width:70vw;
   list-style-type: none;
-  /* float:right; */
 
 }
 
@@ -300,34 +346,40 @@ ul {
 }
 
 .job-seekers-side-bar-item {
-  /* margin-top: 13px; */
   padding: 15px;
-  /* border: 2px dashed grey; */
   background: #94aac4;
   margin-bottom: 4px;
   border-radius: 10px;
   color: #f5f5f5;
 }
 
-.event-photo {
+.job-seekers-side-bar-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.event-photo-wrapper {
   width: 20vw;
   height: 35vh;
+}
+
+.event-photo {
+  width: 100%;
+  height: 100%;
   object-fit:cover;
-  /* border-radius: 10px; */
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .job-seekers-match-event-item {
-  /* padding:1px;  */
-  /* height: 30vh; */
   display: flex;
-  /* flex-direction: column; */
-  /* justify-content: space-between; */
   align-items: center;
-  /* border: 2px dashed grey; */
+  justify-content: flex-start;
   background: #94aac4;
-  margin-bottom: 4px;
-  /* border-radius: 10px; */
-  margin-bottom: 10px;
+  margin-bottom: 10px; 
+  border-radius: 10px;
 }
 
 .event-detail-contianer {
@@ -401,7 +453,7 @@ ul {
 
 
 .add-event-js {
-  width: 50%;
+  width: 100px;
 }
 
 .save-change-btn {
@@ -410,7 +462,9 @@ ul {
 }
 
 .job-seekers-side-bar-item-skills {
-  margin-top:5px
+  margin-top:5px;
+  display: block;
+  text-align: center;
 }
 
 #matching-job-seeker-p {
@@ -443,10 +497,6 @@ ul {
 }
 
 .sidebar-menu {
-  /* display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column; */
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3,80px);
@@ -480,6 +530,9 @@ footer {
   margin-top: 20px;
 }
 
+.JobSeekersMatchSidebarMobile {
+  display: none;
+}
 
 @media screen and (max-width: 768px) {
   .moible-nav-icon {
@@ -511,5 +564,80 @@ footer {
 
   .navbar-container {
     padding: 20px;
+  }
+
+  .JobSeekersMatchSidebarMobile {
+    display:flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 30px;
+    overflow: scroll;
+  }
+
+  .JobSeekersMatchSidebar {
+    display: none;
+ 
+  }
+
+  .match-page-container, .event-page-container{
+    padding: 5px 5px;
+  }
+
+  .match-event-list {
+    margin-left: 0px;
+    width:90%;
+  }
+
+  .job-seekers-match-event-item {
+    flex-direction: column;
+    padding-bottom: 10px;
+  }
+
+  .event-photo-wrapper {
+    width: 100%;
+    height: 30vh;
+  }
+
+  .event-photo {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 0px;
+  }
+
+  .event-detail-contianer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin: auto;
+    padding: 15px;
+    color: #f5f5f5;
+  }
+
+  .event-detail-contianer h2 {
+    font-size: 24px;
+  }
+
+  .event-detail-contianer p {
+    font-size: 14px;
+  }
+
+  .all-event-button {
+    font-size: 10px;
+    width: 25vw;
+  }
+
+  .greeting-box h2{
+    font-size: 16px;
+  }
+
+  .event-page-list {
+    width:90%;
+  }
+
+  .event-photo-wrapper-event-page{
+    width: 100%;
+    height: 30vh;
   }
 }
